# MedicalCLAP

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  project_state.json  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  phase_task.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  failpoints.py  health.py  logging_config.py  main.py
backend/tests/: test_health.py  test_history_export.py  test_ipc_watchdog.py  test_retrieval_api.py  test_states.py  test_viewer_nifti.py
docs/: CLOUD_TRAINING.md  DEVELOPMENT.md  RETRIEVAL_SERVING.md
docs/architecture/: AUP-001_ct_encoder_pretraining.md  AUP-002_ctfm_distillation.md  AUP-003_EXECUTION_PLAN.md  AUP-003_ctclip_distillation.md  AUP-004_findings_reranking.md  AUP-005_architecture_pivot_and_scope.md
docs/governance/: BRANCH_PROTECTION.md  branch_protection.api.json
docs/reports/: P0_COMMIT_MESSAGE.txt  P0_CONFORMANCE_REPORT.md  P0_EXIT_REPORT.md  P0_PR_DESCRIPTION.md  (+63 more)
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: .env.example  README.md  docker-compose.yml
ml/: README.md  requirements-model.txt  requirements-text.txt  requirements.txt
scripts/: backup.py  ci_local.sh  dev_up.sh  env_check.sh  index_ctclip.py  perf_report.py  spec_manifest.py
tests/: test_backup_restore.py  test_doc_integrity.py  test_perf_report.py  test_project_state_sync.py  test_repo_structure.py  test_retrieval_rerank.py  test_security_hardening.py
(+128 files in other folders)
