[project]
name = "medical-clip-3d"
version = "0.0.0"
description = "Local 3D chest-CT <-> report retrieval, history, and experimental text-guided 3D segmentation (research/demo only)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["docs/specs", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["frontend/", "docs/"]

[tool.coverage.run]
branch = true
source = ["scripts", "tests"]

[tool.bandit]
exclude_dirs = ["tests", "frontend", "node_modules", ".venv"]
