[project]
name = "medical-clip-3d"
version = "0.0.0"
description = "Local 3D chest-CT <-> report retrieval, history, and experimental text-guided 3D segmentation (research/demo only)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["docs/specs", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
# 3.12 here only affects the dev/governance scripts + tests (not shipped in the
# 3.11 runtime container); it avoids a false positive parsing newer numpy stubs
# that land in the local interpreter via backend deps.
python_version = "3.12"
ignore_missing_imports = true
exclude = ["frontend/", "docs/"]

[tool.coverage.run]
branch = true
source = ["scripts", "tests"]

[tool.bandit]
exclude_dirs = ["tests", "frontend", "node_modules", ".venv"]
